Poprawione ścieżki routera i konfiguracja pod GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movepage",
-  "homepage": "https://Grzy3k-bit.github.io/Move-Page/",
+  "homepage": "https://Grzyb3k-bit.github.io/Move-Page/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
